# rust-stock

./: Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
src/: aio.rs  api.rs  app.rs  events.rs  lib.rs  main.rs  model.rs  storage.rs  widget.rs
