[package]
name = "stock"
version = "3.1.0"
edition = "2021"

[dependencies]
#crossterm支持windows,但性能比termion稍差，需要最新0.23版本，否则鼠标支持有问题
tui = { version = "0.19.0", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.29.0", features = [ "serde" ] }

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# 解决tui里中文宽度的计算
unicode-width = "0.2"

# reqwest太大了3M, ureq也有2M, http_req只有300k
http_req = "0.14.2"

# 查询跨平台的通用目录位置
dirs-next = "2.0"
